novaina dark le background d napiko margin

--- a/jenny.css
+++ b/jenny.css
@@ -1,6 +1,7 @@
 *{
-    background-color: red;
+    background-color: darkgray;
     box-sizing: border-box;
     height: 100vh;
+    margin: 1px;
     
 }
